--- a/_posts/2020-09-22-GIS-22002.md
+++ b/_posts/2020-09-22-GIS-22002.md
@@ -3,19 +3,15 @@ show_in_nav: false
 layout: post
 title: "地信22002班"
 author: "Fangli ZHANG"
-categories: course
+categories: public
 notshow: 1
-tags: [course, undergraduate]
+tags: [public, undergraduate]
 image:
   feature: class/GIS22002/20201001-01.jpg
-  teaser: class/GIS22002/20201001-02.jpg
+  teaser: class/GIS22002/20201001-03.jpg
   credit: javascript
   creditlink: ""
 ---
-
-# 地信22002班
-
-长江大学地球科学学院地信系
 
 ## 目录
 {:.no_toc}
@@ -23,10 +19,14 @@ image:
 {:toc}
 
 
+# 班级画册
+
 ## 20200922 一次班会
 
 +   新生第一次班会，五湖四海齐聚一堂，互相认识之后，陶潇桐同学和李楚楚同学成为了班级联络员。
 ![三营一连-林竑川](../assets/img/class/GIS22002/20200922-01.jpg)
+
+
 
 ## 20201001 军训会操
 
