--- a/_posts/2020-09-22-GIS-22002.md
+++ b/_posts/2020-09-22-GIS-22002.md
@@ -1,14 +1,14 @@
 ---
 show_in_nav: false
 layout: post
-title: "地信22002班"
+title: "Class 22002 in the Department of GIS"
 author: "Fangli ZHANG"
 categories: public
 notshow: 0
 tags: [public, undergraduate]
 image:
-  feature: class/GIS22002/20201001-01.jpg
-  teaser: class/GIS22002/20201001-01.jpg
+  feature: class/GIS22002/20201001-03.jpg
+  teaser: class/GIS22002/20201001-03.jpg
   credit: javascript
   creditlink: ""
 ---
