--- a/_posts/2020-09-22-GIS-22002.md
+++ b/_posts/2020-09-22-GIS-22002.md
@@ -1,7 +1,7 @@
 ---
 show_in_nav: false
 layout: post
-title: "Class 22002 in the Department of GIS"
+title: "地信22002"
 author: "Fangli ZHANG"
 categories: public
 notshow: 0
