--- a/_posts/2020-09-22-GIS-22002.md
+++ b/_posts/2020-09-22-GIS-22002.md
@@ -26,13 +26,12 @@ image:
 +   新生第一次班会，五湖四海齐聚一堂，互相认识之后，陶潇桐同学和李楚楚同学成为了班级联络员。
 ![长江大学武汉校区武教B312教室](../assets/img/class/GIS22002/20200922-01.jpg "长江大学武汉校区武教B312教室")
 
-
-
 ## 20201001 军训会操
-
 +   新生军训会操，林竑川教官和他的三营一连。
 ![长江大学武汉校区运动场](../assets/img/class/GIS22002/20201001-01.jpg "长江大学武汉校区运动场")
-
-
 +   会操结束，三营一连榜上有名，地信22002班和他们的方小地。
 ![长江大学武汉校区运动场](../assets/img/class/GIS22002/20201001-02.jpg "长江大学武汉校区运动场")
+
+## 20201002 开学典礼
++   新生开学典礼，主会场设在长江大学荆州校区的大礼堂，地信2班的同学们在武汉校区的教室里云参会。
+![长江大学武汉校区武教B106](../assets/img/class/GIS22002/20201002-01.jpg "长江大学武汉校区武教B106")
