--- a/_posts/2020-09-22-GIS-22002.md
+++ b/_posts/2020-09-22-GIS-22002.md
@@ -35,3 +35,16 @@ image:
 ## 20201002 开学典礼
 +   新生开学典礼，主会场设在长江大学荆州校区的大礼堂，地信2班的同学们在武汉校区的教室里云参会。
 ![长江大学武汉校区武教B106](../assets/img/class/GIS22002/20201002-01.jpg "长江大学武汉校区武教B106")
+
+## 20201004 早晚自习
++ 大学一年级的新生们，需早晚到自习室自习，目前阶段的主要任务是面向大学英语和全国大学英语四级考试，早晚自习时间：
++ 早自习
+  - 周一至周五
+  - 07:00 至 07:45
++ 晚自习
+  - 周日至周四
+  - 19:00 至 21:00
+
+## 20201005 开课一周
++   长江大学2020-2021学年第1学期校历第6周，同学们正式走进教室开始上课了。
+![长江大学武汉校区武教A309](../assets/img/class/GIS22002/20201005-01.jpg "长江大学武汉校区武教A309")
