--- a/_posts/2020-09-22-GIS-22002.md
+++ b/_posts/2020-09-22-GIS-22002.md
@@ -48,3 +48,19 @@ image:
 ## 20201005 开课一周
 +   长江大学2020-2021学年第1学期校历第6周，同学们正式走进教室开始上课了。
 ![长江大学武汉校区武教A309](../assets/img/class/GIS22002/20201005-01.jpg "长江大学武汉校区武教A309")
+
+## 20201006 班干部们
++   晚六点半，石油科技大楼大礼堂，举行了地球科学学院2020级本科新生开学典礼，我班即将当选的陶潇桐班长作为新生代表上台发言。
+![长江大学武汉校区石油科技大楼大礼堂](../assets/img/class/GIS22002/20201006-02.jpg "长江大学武汉校区石油科技大楼大礼堂")
+
++ 晚八点地信2班第二次班会，选出第一届班委会（团支部）成员。
+  - 班长（兼安全委员）：陶潇桐
+  - 团支书：李楚楚
+  - 副班长：王术澔
+  - 组织宣传委员：符凡翕
+  - 权益保障委员（兼生活委员）：方经忠
+  - 学习委员：虞舒婷
+  - 文体委员：张逸枫
+  - 心理委员：王烨辰
+
+![长江大学武汉校区武教B312](../assets/img/class/GIS22002/20201006-01.jpg "长江大学武汉校区武教B312")
