--- a/_posts/2020-09-22-GIS-22002.md
+++ b/_posts/2020-09-22-GIS-22002.md
@@ -64,3 +64,16 @@ image:
   - 心理委员：王烨辰
 
 ![长江大学武汉校区武教B312](../assets/img/class/GIS22002/20201006-01.jpg "长江大学武汉校区武教B312")
+
+
+## 20201015 新生导师
++ 下午两点，武教B-102，地球科学学院地信系全体老师见面会，为2020级新生介绍了GIS专业的学习方法，为每位新生分配了导师。
+![长江大学武汉校区武教B102](../assets/img/class/GIS22002/20201015-01.jpg "长江大学武汉校区武教B102")
+
++ 来自地信22004班的六位同学。
+  - 班浩泷
+  - 陈羽杰
+  - 段舜尧
+  - 贺自成
+  - 刘明冉
+  - 刘亚男
