--- a/_posts/2020-09-22-GIS-22002.md
+++ b/_posts/2020-09-22-GIS-22002.md
@@ -77,3 +77,21 @@ image:
   - 贺自成
   - 刘明冉
   - 刘亚男
+
+## 20201022 篮球比赛
++ 2020年10月22日，武汉校区第三届“新生杯”篮球赛开幕，长江大学篮球协会（武）。
++ 2020年10月24日，地信22002 vs 资工21802，期待补充比赛战况和现场照片。
++ 2020年10月26日，地信22002 vs 地质22003，期待补充比赛战况和现场照片。
++ 2020年接下来的某一天，未完待续，TBD......
+
+## 20201023 上晚自习
++ 2020年10月23日，星期五，晚19:00-21:00，长江大学武汉校区武教B312，陪大家自习。
+    - 晚自习应到33人，实到33人，有学生会组织督促查验。
+    - 陶潇桐小恙，以身示范坚持自习，精神可嘉。
+    - 同学们多复习高等数学，想必课程内容较难，需大家多花精力应付。
+    - 同学们各自复习，全程安静平和，余心甚慰。
+    - 愿大家能保持学风，在课堂上也能保持风度，不看手机，专心听讲，认真笔记。
+
+## 20201024 素质拓展
++ 2020年10月24日，星期六，长江大学武汉校区运动场，2020级新生素质拓展活动。
++ ![长江大学武汉校区运动场](../assets/img/class/GIS22002/20201024-01.jpg "长江大学武汉校区运动场")
